--- a/survey-css.css
+++ b/survey-css.css
@@ -7,10 +7,11 @@ body {
   margin: 10px 0 0 0;
 }
 #header {
-  padding: 8px 0 2px 0;
+  padding: 5px 0 2px 0;
   margin: 0;
   height: 25px;
-  font-size: 25px;
+  font-size: 20px;
+  font-weight: bold;
   background-color: #F2B50F;
   width: 100%;
   text-align: center;
@@ -206,6 +207,7 @@ text {
 .small {
   font-size: 18px;
   font-weight: bold;
+  color: #aa0000;
 }
 .grey {
   color: #555;
@@ -219,4 +221,7 @@ text {
   overflow-x: auto;
   height: 120px;
   font-weight: bold;
+}
+#omni-search {
+  font-size: 12px;
 }
